2000-11-21 09:00:00  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* mm-decode.el (mm-verify-option): Default value.

	* mml-sec.el (mml-secure-part): Error message.

2000-11-20 18:00:00  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* gnus-ml.el (gnus-mailing-list-archive): Use browse-url.

2000-11-20 17:00:00  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* gnus-art.el (gnus-article-make-menu-bar): Use easy-menu-add.

2000-11-20 16:00:00  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* gnus-art.el (gnus-article-describe-key): Use prompt.
	(gnus-article-describe-key-briefly): Ditto.

2000-11-20 15:00:00  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* gnus-agent.el (gnus-agent-expire): Ignore corrupted history.

2000-11-20 10:00:00  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* gnus-art.el (gnus-article-describe-key): New function.
	(gnus-article-describe-key-briefly): New function.

2000-11-19 23:00:00  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* mm-decode.el (mm-decrypt-option): Doc typo.

	* gnus-art.el (gnus-article-read-summary-keys): lookup-key may
	return a number.

2000-11-19 21:00:00  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* message.el (message-newline-and-reformat): Typo.

2000-11-19 12:00:00  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* gnus-art.el (article-verify-x-pgp-sig): Check whether
	original-article-buffer exists.

	* rfc2047.el (rfc2047-q-encoding-alist): Match Resent-.
	(rfc2047-header-encoding-alist): Addresses are different from text.
	(rfc2047-encode-message-header): Ditto.
	(rfc2047-dissect-region): Extra parameter.
	(rfc2047-encode-region): Ditto.
	(rfc2047-encode-string): Ditto.

2000-11-19 00:00:00  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* mm-uu.el (mm-uu-pgp-encrypted-extract-1): New function.
	(mm-uu-pgp-encrypted-extract): Use it.
	(mm-uu-pgp-signed-extract-1): New function.
	(mm-uu-pgp-signed-extract): Use it.

	* gnus-art.el (gnus-mime-display-security): New function.
	(gnus-mime-display-part): Use it.
	(gnus-mime-security-verify-or-decrypt): New function.